chore: add oauth2-proxy secrets inside its own secrets file

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -4,37 +4,33 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:3r8mpQ1/qsh28A==,iv:iW4h9KbQL3p7eGIk404OBS5D1sX/REvnRB0dFhtQjgo=,tag:FMHZABOYMI65GN7JVqnWdA==,type:str]
-    SECRET_EMAIL: ENC[AES256_GCM,data:XlCJcG2OIQvfIZZcIVt9bCmG8as=,iv:76EpdBqLF7NkiQ1B6j3/AjvhK8VBoFe30U7Bm9jRkno=,tag:y23t1I74HhSSIS7EW2Z1OQ==,type:str]
-    SECRET_AUTH0_DOMAIN: ENC[AES256_GCM,data:3owt2UerFYzQ4m2Vjp2alr9LCw==,iv:+Bqe4Q3k8POI+eiKihBRoeWqPzu5CRCTgfCNA768U5U=,tag:2WjIga9BO4Qq6cQdq32nrw==,type:str]
-    SECRET_AUTH0_CLIENT_ID: ENC[AES256_GCM,data:x5BoSgCYzDVlS8qPs2sKVs45WstcCj1kPGgPnuObW5E=,iv:bDuNjP1MCU9wl8X4UlFyh7QarR+kUs6MVPaaNDA99kE=,tag:BCJgUm1ODLDMOEfDI8M28g==,type:str]
-    SECRET_AUTH0_CLIENT_SECRET: ENC[AES256_GCM,data:p6GlsEH0ZcodLYL3Q3TCXeULmjzIQ8eIHvFbCu90Bb3s8REzwOKYsfCLrsk3gHapmarEZgtRPjZJv4X02OVQHA==,iv:w505FDA801XOTC4Nx3Ygq7pHEPU+CY+x+wKWJ1XHSsw=,tag:sYt5HOwEYzTh4DoZ2UbVqw==,type:str]
-    SECRET_OAUTH2_COOKIE_SECRET: ENC[AES256_GCM,data:xjnwrpd6xi6WjClbzn9LRXPvhPoXA7Xrk5f0YYnMfW1fXZmmsS6DVpIwRec=,iv:by4DYz7fDZOoX18uzz8KTKPaPuQjT+FtB2mubJ3nSy8=,tag:RcFnvRtgOj2QHW8ud0N7cw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:0cvbnyBEopLDbg==,iv:ysbeTDVg7EH3/HXOfeYKWJPGx61PZ4Sm/ImBfvfUtQ4=,tag:LBq298Pr64rGb9kJakAXPQ==,type:str]
+    SECRET_EMAIL: ENC[AES256_GCM,data:pRwzk/h99pPIq+DDSPQ5TTrYJ2E=,iv:DgUrE6pgV9vzQuxAs/8gxGhEbX96OBnqcw6qxbJTOcc=,tag:X3EbFCBGxeVM0RdhhU1gOg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-06-11T17:07:50Z"
-    mac: ENC[AES256_GCM,data:ops7+LNE8nx7aPt6lF/4iRkl+8F3OiqKTcoj3AhjFopUOI9u0JUmlv8IjTmiZuz42buQfaF1D5AC6ocJJ6sbwBfJbyG7WMl8AWMz2GCLfgB6i9MpSLzBTfdCZq/5/VnnTU4S4/qbqsnBcXDkK5OYr7BZPNoL/C26+pq+ujmZDzQ=,iv:mCYZMpomg0rzF7z8zT7X0vBT9A7MAkU9GwHbUF21ZaY=,tag:7IZ1xj5FRj2Q0eoYqIMbrg==,type:str]
+    lastmodified: "2021-06-12T09:55:33Z"
+    mac: ENC[AES256_GCM,data:ExKlDUb5gUeiYGGxrULPvu4a4IugUBw6vnXAJIFYnLLnHmE8G1v4KsSKhNQ6THizLWZ0t/9lo8pTNx+xv9TPhhyadncRwAWutGU0OWM/4WmJTeSK/XW1bxO2/zsKKTyjYM38lRTpPvd5lHbwDlBeoeWlYj9WdIia1qSfrRZTDWQ=,iv:d8E6cmVOcqw0mC2G42Wit6lsEDmV66Lo02oJjC/Ncpc=,tag:WH74bhiRampaV2gPUJYDCA==,type:str]
     pgp:
-        - created_at: "2021-06-11T17:07:49Z"
+        - created_at: "2021-06-12T09:55:31Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv9H5s/YVkJQB9dTZKCmu8q6VyrIh8tP6S4FVuFgGlAHjzu
-            O/zqvdcJ65xyxOyXWWQFvPXc5dhZyPlvkiS22dDZi4t8wiZEEiZwU5kqsAwZlt81
-            O5kIV+1BPHyFkLNovETz5YKt5ySUMc6vAxKIzNVX2TKWg611VTE3xXvQFJarl18V
-            nHwNjeiI8Eeq8qxneNO6vXnDnUn4Vs5SG0gU9LD+PItXdy4egIzDEMxok+U4RGzE
-            rcidcczuhFiAfTLnDGK8Xq6clhukKnMM06RsRW46Lm3/ylXnxvQVDhSrnzeAX83F
-            FDUie9baVj2f6XLGZwtfaC1SNL1LEfMQcI8tBXa5RYXrYf15NuOiBrLa+0sgeo15
-            WamCXoriCQUDdd0aOHQU3cbQEIFKdsg6d1UzbBIzSjxpngS95USkQsTnA0WiPzfc
-            fb9T82mGqKWp88pg/zhbvkFooMrc8ECkIXRngsJjGSaJN6ak6wxPOWI0YEov/BO1
-            pGyvsSW7K7H+f7f2v8qz0l4BqXFa8BHqR7imD4/6Fqk7NKBKQCqudPNiTeafZ9Ar
-            HqAsjDt5loQerBeVimyUr6wODQxTNlTcFY8cpVgF+Wq4mwOLyGRzyOb4AdNa0nsI
-            96qdE3xI5pt/P9pAB10s
-            =jw9P
+            hQGMA71EESEn7N2iAQv9FWXQVLELUYX31Pv0x/BkgKosh3BTClGLd7X56gOYrqQG
+            wfQvwbTpGFJFCAOVjoRSTEI8L7e/nVgQMeucrX9cN7dePa2zDaTjei60UTuIXSXM
+            mmIzKqkduwIOTwc1NprHlozT3eyfhbeY1q5hRlEImjwgexuTLeXaaog61iIWbQE3
+            1Ly5O9tvGY3QUWLyLpvMfAvpnBCBmsppbTQU4Jn7uY+Urfk/FB/Q6EuIqeRNzeU8
+            fV1imVHi01fLB7oH+Up7q0vFpu145ye/rWMN3bVzB1XmijC1VBP9bbcRPqMgXg4i
+            6k6BnBpJysWaps2lDno/Irx66o3qxGEQ5sgIqFZTPfWMWW+Nh5A9WV3xm3w42zOV
+            YEAOHOonDcyQ8Hcw/5SrugutznAX41gCvWCiKHrMqxVX2c8vB+N1YqNQZkpqu/jT
+            q/MTY1CXDQGxQyyIHted2D9iNy4xs/j68xgZvEmbgnp1yJSJQE5v5tAc+jHaE8LI
+            0ELWtLW61a7JHPcamuzq0l4BjzMG/W3RNct68lKu0SgjAZQKOKziFIbPmI8VQuEs
+            9QZ3pTlpYRT4DxOwTFfeofC2KN0/cYNUULswdBe/aALCOwCktX5xfA01cLyogNbf
+            q7vuBBjcLKxTpZWU7BnQ
+            =0ZPR
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
