--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -23,19 +23,6 @@ spec:
 
     replicaCount: 1
 
-    config:
-      clientID: "${SECRET_AUTH0_CLIENT_ID}"
-      clientSecret: "${SECRET_AUTH0_CLIENT_SECRET}"
-      cookieSecret: "${SECRET_OAUTH2_COOKIE_SECRET}"
-
-    authenticatedEmailsFile:
-      enabled: true
-      # Defines how the email addresses file will be projected, via a configmap or secret
-      persistence: configmap
-      # One email per line
-      restricted_access: |
-        ${SECRET_EMAIL}
-
     ingress:
       enabled: true
       path: /oauth2
@@ -43,12 +30,7 @@ spec:
       tls:
         - hosts:
             - "auth.${SECRET_DOMAIN}"
-
-    extraArgs:
-      provider: oidc
-      oidc-issuer-url: "https://${SECRET_AUTH0_DOMAIN}/"
-      skip-provider-button:
-      pass-authorization-header:
-      email-domain: "${SECRET_EMAIL}"
-      cookie-domain: ".${SECRET_DOMAIN}"
-      whitelist-domain: ".${SECRET_DOMAIN}"
+  valuesFrom:
+    - kind: Secret
+      name: oauth2-proxy-helm-values
+      optional: false
