chore: readd authenticatedEmailsFile to oauth2-proxy

--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -23,6 +23,12 @@ spec:
 
     replicaCount: 1
 
+    authenticatedEmailsFile:
+      enabled: true
+      # One email per line
+      restricted_access: |
+        ${SECRET_EMAIL}
+
     ingress:
       enabled: true
       path: /oauth2
