chore: make oauth2-proxy use google instead of auth0

--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -36,6 +36,12 @@ spec:
       tls:
         - hosts:
             - "auth.${SECRET_DOMAIN}"
+    extraArgs:
+      provider: google
+      cookie-domain: ".${SECRET_DOMAIN}"
+      whitelist-domain: ".${SECRET_DOMAIN}"
+      exclude-logging-path: "/ping"
+    
   valuesFrom:
     - kind: Secret
       name: oauth2-proxy-helm-values
