fix: unset email-domain in oauth2-proxy

--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -38,10 +38,12 @@ spec:
             - "auth.${SECRET_DOMAIN}"
     extraArgs:
       provider: google
+      skip-provider-button: false
+      email-domain:
       cookie-domain: ".${SECRET_DOMAIN}"
       whitelist-domain: ".${SECRET_DOMAIN}"
       exclude-logging-path: "/ping"
-    
+
   valuesFrom:
     - kind: Secret
       name: oauth2-proxy-helm-values
