chore: attempt at fixing skip-provider-button not working

--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -47,8 +47,8 @@ spec:
     extraArgs:
       provider: google
       provider-display-name: "Home Account"
-      skip-provider-button: false
-      pass-basic-auth: false
+      skip-provider-button: "false"
+      pass-basic-auth: "false"
       cookie-domain: ".${SECRET_DOMAIN}"
       whitelist-domain: ".${SECRET_DOMAIN}"
       exclude-logging-path: "/ping"
