--- a/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
+++ b/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
@@ -17,6 +17,10 @@ spec:
       interval: 5m
   # https://github.com/bitnami/charts/blob/master/bitnami/external-dns/values.yaml
   values:
+    image:
+      registry: gcr.io
+      repository: k8s-staging-external-dns/external-dns
+      tag: v20210616-v0.8.0-56-g35f25947-arm64v8
     logLevel: debug
     domainFilters:
       - "${SECRET_DOMAIN}"
@@ -30,6 +34,7 @@ spec:
     policy: sync
     txtPrefix: "k8s."
     crd:
+      # disabled, pulled from source repo in crds/
       create: false
       apiversion: externaldns.k8s.io/v1alpha1
       kind: DNSEndpoint
