--- a/cluster/crds/external-dns/kustomization.yaml
+++ b/cluster/crds/external-dns/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+# need namespace or else this will happen
+namespace: networking
 resources:
   - https://github.com/kubernetes-sigs/external-dns/blob/v0.8.0/docs/contributing/crd-source/crd-manifest.yaml
