--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -44,6 +44,10 @@ spec:
       tls:
         - hosts:
             - "auth.${SECRET_DOMAIN}"
+      annotations:
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+        
     # TODO: Check if --reverse-proxy flag is useful or not
     extraArgs:
       provider: google
