--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -47,11 +47,11 @@ spec:
       annotations:
         external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-        
+
     # TODO: Check if --reverse-proxy flag is useful or not
     extraArgs:
       provider: google
-      provider-display-name: "a valid email"
+      provider-display-name: "an authenticated email"
       skip-provider-button: "false"
       pass-basic-auth: "false"
       cookie-domain: ".${SECRET_DOMAIN}"
