fix: add security context to qbittorent helm release

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -34,6 +34,9 @@ spec:
         tls:
           - hosts:
               - "qb.${SECRET_DOMAIN}"
+    podSecurityContext:
+      supplementalGroups:
+        - 100
     persistence:
       config:
         enabled: true
