wip: attempt at fixing qbittorrent not working

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -34,9 +34,9 @@ spec:
         tls:
           - hosts:
               - "qb.${SECRET_DOMAIN}"
-    podSecurityContext:
-      supplementalGroups:
-        - 100
+    securityContext:
+      fsGroup: 1000
+      runAsUser: 1000
     persistence:
       config:
         enabled: true
