wip: another attempt at making qbittorrent ingress work

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -34,6 +34,8 @@ spec:
         tls:
           - hosts:
               - "qb.${SECRET_DOMAIN}"
+    settings:
+      automaticPortSetup: true
     podSecurityContext:
       fsGroup: 1001
       runAsUser: 1001
