fix: add tls secretname to qbittorrent

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -31,7 +31,8 @@ spec:
               - path: /
                 pathType: Prefix
         tls:
-          - hosts:
+          - secretName: qbittorent-tls
+            hosts:
               - "qb.${SECRET_DOMAIN}"
     settings:
       automaticPortSetup: true
