--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -28,8 +28,7 @@ spec:
       annotations:
         kubernetes.io/ingress.class: "nginx"
         nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
-        nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+        nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
         nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
         external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
