wip(qbittorrent): add tty to shadowsocks container

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -57,6 +57,7 @@ spec:
         image: shadowsocks/shadowsocks-libev:v3.3.5
         command: [ "ss-local -s 185.65.134.66 -p 443 -l 1080 -b 0.0.0.0 -k 23#dfsbbb -m chacha20" ]
         imagePullPolicy: IfNotPresent
+        tty: true
         ports:
           - containerPort: 1080
             protocol: TCP
