wip(qbittorrent): split ss-local command into "command" and "args"

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -55,7 +55,8 @@ spec:
     additionalContainers:
       - name: shadowsocks
         image: shadowsocks/shadowsocks-libev:v3.3.5
-        command: [ "ss-local -s 185.65.134.66 -p 443 -l 1080 -b 0.0.0.0 -k 23#dfsbbb -m chacha20" ]
+        command: [ "ss-local" ]
+        args: [ "-s",  "185.65.134.66", "-p", "443", "-l", "1080", "-b", "0.0.0.0", "-k", "23#dfsbbb", "-m", "chacha20" ]
         imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
