wip(openvpn): add sys_module to securityContext

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -104,6 +104,7 @@ spec:
           capabilities:
             add:
               - NET_ADMIN
+              - SYS_MODULE
         # privileged: true
         #          ports:
         #            - containerPort: 1080
