wip(openvpn): fix hostPath not working

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -55,7 +55,7 @@ spec:
       dev-net:
         enabled: true
         type: hostPath
-        mountPath: "/dev/net"
+        hostPath: "/dev/net"
     resources:
       requests:
         memory: 250Mi
