wip(openvpn): explicitly point to mullvad openvpn confs

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -106,6 +106,8 @@ spec:
         image: dperson/openvpn-client:latest
         imagePullPolicy: IfNotPresent
         env:
+          - name: VPN_FILES
+            value: "mullvad_de_fra.conf;mullvad_ca.crt"
           - name: FIREWALL
             value: "true"
           - name: DNS
