wip(openvpn): disable firewall and dns

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -108,10 +108,10 @@ spec:
         env:
           - name: VPN_FILES
             value: "mullvad_de_fra.conf;mullvad_ca.crt"
-          - name: FIREWALL
-            value: "true"
-          - name: DNS
-            value: "true"
+#          - name: FIREWALL
+#            value: "true"
+#          - name: DNS
+#            value: "true"
         securityContext:
           capabilities:
             add:
