wip(openvpn): make openvpn container privileged

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -115,7 +115,7 @@ spec:
         securityContext:
           capabilities:
             add: [ "NET_ADMIN", "NET_RAW" ]
-        # privileged: true
+          privileged: true
         #          ports:
         #            - containerPort: 1080
         #              protocol: TCP
