--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -103,7 +103,7 @@ spec:
           successThreshold: 1
       - name: openvpn
         # repo doesn't contain semver release
-        image: dperson/openvpn-client:latest
+        image: dperson/openvpn-client:aarch64
         imagePullPolicy: IfNotPresent
         securityContext:
           capabilities:
