wip(openvpn): add ROUTE env variable to openvpn container

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -105,22 +105,24 @@ spec:
         # repo doesn't contain semver release
         image: dperson/openvpn-client:aarch64
         imagePullPolicy: IfNotPresent
-#        securityContext:
-#          capabilities:
-#            add: [ "NET_ADMIN", "SYS_MODULE" ]
+        securityContext:
+          capabilities:
+            add: [ "NET_ADMIN" ]
         env:
           - name: VPN_FILES
             value: "mullvad_de_fra.conf;mullvad_ca.crt"
-        #          - name: FIREWALL
-        #            value: ""
-        #          - name: DNS
-        #            value: ""
+          - name: FIREWALL
+            value: ""
+          - name: DNS
+            value: ""
+          - name: ROUTE
+            value: 127.0.0.1/32
         #          ports:
         #            - containerPort: 1080
         #              protocol: TCP
         volumeMounts:
-#          - mountPath: /vpn
-#            name: openvpn-config
+          #          - mountPath: /vpn
+          #            name: openvpn-config
           #          - mountPath: /dev/net
           #            name: dev-net
           - mountPath: /run
