wip(openvpn): disable ipv6 in openvpn container

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -103,11 +103,14 @@ spec:
           successThreshold: 1
       - name: openvpn
         # repo doesn't contain semver release
-        image: dperson/openvpn-client:armhf
+        image: dperson/openvpn-client:rpi
         imagePullPolicy: IfNotPresent
         securityContext:
           capabilities:
             add: [ "NET_ADMIN", "SYS_MODULE" ]
+          sysctls:
+            - name: net.ipv6.conf.all.disable_ipv6
+              value: "0"
         env:
           - name: VPN_FILES
             value: "mullvad_de_fra.conf;mullvad_ca.crt"
@@ -121,8 +124,8 @@ spec:
         #            - containerPort: 1080
         #              protocol: TCP
         volumeMounts:
-          #          - mountPath: /vpn
-          #            name: openvpn-config
+          - mountPath: /vpn
+            name: openvpn-config
           #          - mountPath: /dev/net
           #            name: dev-net
           - mountPath: /run
